--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -6,17 +6,23 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
 <!--   📜 https://github.com/mdn/js-examples/tree/master/modules -->
-<body>
-    <div id='root'></div>
-    <script type='module'>
-        const div = document.createElement('div');
-        div.textContent = 'Hello world';
-        div.className = 'container';
+<html>
+    <body>
+        <script type='module'>
+            const root = document.createElement('div');
+            root.id = 'root';
+            const body = document.getElementsByTagName('body')[0];
+            body.append(root);
 
-        const root = document.getElementById('root');
-        root.append(div);
-    </script>
-</body>
+            const div = document.createElement('div');
+            div.textContent = 'Hello world';
+            div.className = 'container';
+    
+            root.append(div);
+        </script>
+    </body>
+</html>
+
 <!-- These next instructions are to be written in JavaScript in the <script> tag -->
 <!-- 🐨 Create a div -->
 <!--   💰 document.createElement('div') -->
