--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -6,17 +6,20 @@
 
   <!-- 🐨 add React and ReactDOM on the page.
        💰 Here are script tags that'll do the job:-->
-  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script> 
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
- 
 
   <script type="module">
-    const rootElement = document.getElementById('root');
+    const rootElement = document.getElementById('root')
 
-    const elementType = 'h1';
-    const elementProps = {id: 'element-id', children: 'Hello world!'};
-    const reactElement = React.createElement(elementType, elementProps);
-
-    ReactDOM.render(reactElement, rootElement);
+    const reactElement = React.createElement('div', {
+      className: 'container',
+      children: [
+        React.createElement('span', {children: 'Hello', key: '1'}),
+        ' ',
+        React.createElement('span', {children: 'World', key: '2'}),
+      ],
+    })
+    ReactDOM.render(reactElement, rootElement)
   </script>
 </body>
