--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,18 +11,17 @@
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const message = children => {
+    const message = ({children}) => {
       return <div className="message">{children}</div>
     }
 
     const element = (
       <div className="container">
-        {message('Hello World')}
-        {message('Goodbye World')}
+        {React.createElement(message, {children: 'Hello World'})}
+        {React.createElement(message, {children: 'Goodbye World'})}
       </div>
     )
 
-    // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.render(element, document.getElementById('root'))
   </script>
 </body>
