--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,14 +11,14 @@
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const message = ({children}) => {
+    const Message = ({children}) => {
       return <div className="message">{children}</div>
     }
 
     const element = (
       <div className="container">
-        {React.createElement(message, {children: 'Hello World'})}
-        {React.createElement(message, {children: 'Goodbye World'})}
+        <Message>Hello World</Message>
+        <Message>Goodbye World</Message>
       </div>
     )
 
