Creating custom components-extra credit-3

--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,14 +11,17 @@
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const Message = ({children}) => {
-      return <div className="message">{children}</div>
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
     }
 
     const element = (
       <div className="container">
-        <Message>Hello World</Message>
-        <Message>Goodbye World</Message>
+        <Message greeting={'Hello'} subject={'World'} />
       </div>
     )
 
