--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,6 +6,7 @@
   <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
@@ -18,10 +19,15 @@
         </div>
       )
     }
+    Message.propTypes = {
+      greeting: PropTypes.string.isRequired,
+      subject: PropTypes.string.isRequired,
+    }
 
     const element = (
       <div className="container">
-        <Message greeting={'Hello'} subject={'World'} />
+        <Message greeting={'World'} subject={'Hello'} />
+        <Message greeting={'World'} subject={'Goodbye'} />
       </div>
     )
 
